--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
           <!-- Навигация -->
           <ul class="site-nav">
             <li class="item">
-              <a href="" class="link current">Студия</a>
+              <a href="" class="link current underline">Студия </a>
             </li>
+
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио </a>
             </li>
+
             <li class="item">
-              <a href="" class="link">Контакты</a>
+              <a href="" class="link">Контакты </a>
             </li>
           </ul>
         </nav>
 
         <!-- Контакты в меню-->
-
         <ul class="contacts">
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="link icon-hov">
               <svg class="button-icon" width="16px" height="12px">
-                <use href="./images/sprite-new.svg#envelope"></use>
+                <use href="./images/sprite.svg#envelope"></use>
               </svg>
-
               info@devstudio.com
             </a>
           </li>
@@ -58,9 +58,8 @@
           <li class="contacts-item">
             <a href="tel:+380991111111" class="link icon-hov">
               <svg class="button-icon" width="10px" height="16px">
-                <use href="./images/sprite-new.svg#smartphone"></use>
+                <use href="./images/sprite.svg#smartphone"></use>
               </svg>
-
               +38 096 111 11 11
             </a>
           </li>
@@ -76,7 +75,20 @@
           <h1 class="hero-title">
             Эффективные решения <br />для вашего бизнеса
           </h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Заказать услугу
+          </button>
+
+          <!-- Модальное окно -->
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button class="close-button" data-modal-close>
+                <svg width="18" height="18">
+                  <use href="./images/sprite.svg#close"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -88,7 +100,7 @@
             <li class="features">
               <div class="features-icons">
                 <svg class="icon-antenna" width="70px" height="70px">
-                  <use href="./images/sprite-new.svg#antenna"></use>
+                  <use href="./images/sprite.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="feature-list-text">Внимание к деталям</h3>
@@ -100,7 +112,7 @@
             <li class="features">
               <div class="features-icons">
                 <svg class="icon-clock" width="70px" height="70px">
-                  <use href="./images/sprite-new.svg#clock"></use>
+                  <use href="./images/sprite.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="feature-list-text">Пунктуальность</h3>
@@ -112,7 +124,7 @@
             <li class="features">
               <div class="features-icons">
                 <svg class="icon-diagram" width="70px" height="70px">
-                  <use href="./images/sprite-new.svg#diagram"></use>
+                  <use href="./images/sprite.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="feature-list-text">Планирование</h3>
@@ -124,7 +136,7 @@
             <li class="features">
               <div class="features-icons">
                 <svg class="icon-astronaut" width="70px" height="70px">
-                  <use href="./images/sprite-new.svg#astronaut"></use>
+                  <use href="./images/sprite.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="feature-list-text">Современные технологии</h3>
@@ -149,7 +161,11 @@
                 width="370"
                 height="294"
               />
+              <div class="examples-img">
+                <p class="img-descript">Десктопные приложения</p>
+              </div>
             </li>
+
             <li class="section-img">
               <img
                 src="./images/box2.jpg"
@@ -157,6 +173,9 @@
                 width="370"
                 height="294"
               />
+              <div class="examples-img">
+                <p class="img-descript">Мобильные приложения</p>
+              </div>
             </li>
             <li class="section-img">
               <img
@@ -165,6 +184,9 @@
                 width="370"
                 height="294"
               />
+              <div class="examples-img">
+                <p class="img-descript">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -180,8 +202,8 @@
               <img
                 src="./images/igor.jpg"
                 alt="Игорь Демьяненко"
-                width="270px"
-                height="260px"
+                width="270"
+                height="260"
               />
               <div class="team-container">
                 <h3 class="team-title">Игорь Демьяненко</h3>
@@ -191,7 +213,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#instagram"></use>
+                        <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -199,7 +221,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg class="team-icon-twitter" width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#twitter"></use>
+                        <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -207,7 +229,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#facebook"></use>
+                        <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,7 +241,7 @@
                         width="20px"
                         height="20px"
                       >
-                        <use href="./images/sprite-new.svg#linkedin"></use>
+                        <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,8 +252,8 @@
               <img
                 src="./images/olga.jpg"
                 alt="Ольга Репина"
-                width="270px"
-                height="260px"
+                width="270"
+                height="260"
               />
               <div class="team-container">
                 <h3 class="team-title">Ольга Репина</h3>
@@ -241,7 +263,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#instagram"></use>
+                        <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -249,7 +271,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#twitter"></use>
+                        <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -257,7 +279,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#facebook"></use>
+                        <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -265,7 +287,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#linkedin"></use>
+                        <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -276,8 +298,8 @@
               <img
                 src="./images/nikolay.jpg"
                 alt="Николай Тарасов"
-                width="270px"
-                height="260px"
+                width="270"
+                height="260"
               />
               <div class="team-container">
                 <h3 class="team-title">Николай Тарасов</h3>
@@ -286,7 +308,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#instagram"></use>
+                        <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -294,7 +316,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#twitter"></use>
+                        <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -302,7 +324,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#facebook"></use>
+                        <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -310,7 +332,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#linkedin"></use>
+                        <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -321,7 +343,7 @@
               <img
                 src="./images/mixail.jpg"
                 alt="Михаил Ермаков"
-                width="270px"
+                width="270"
                 height="260px"
               />
               <div class="team-container">
@@ -331,7 +353,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#instagram"></use>
+                        <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -339,7 +361,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#twitter"></use>
+                        <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -347,7 +369,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#facebook"></use>
+                        <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -355,7 +377,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg width="20px" height="20px">
-                        <use href="./images/sprite-new.svg#linkedin"></use>
+                        <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -449,28 +471,28 @@
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#instagram"></use>
+                  <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#twitter"></use>
+                  <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#facebook"></use>
+                  <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#linkedin"></use>
+                  <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -478,5 +500,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- Скрипт -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
