--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="link icon-hov">
               <svg class="button-icon" width="16px" height="12px">
-                <use href="./images/sprite-new.svg#envelope"></use>
+                <use href="./images/sprite.svg#envelope"></use>
               </svg>
 
               info@devstudio.com
@@ -53,7 +53,7 @@
           <li class="contacts-item">
             <a href="tel:+380991111111" class="link icon-hov">
               <svg class="button-icon" width="10px" height="16px">
-                <use href="./images/sprite-new.svg#smartphone"></use>
+                <use href="./images/sprite.svg#smartphone"></use>
               </svg>
 
               +38 096 111 11 11
@@ -84,24 +84,47 @@
           <ul class="service">
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/technokryak.jpg"
-                  alt="Технокряк"
-                  width="370"
-                />
+                <div class="text-decoration-hover">
+                  <img
+                    src="./images/technokryak.jpg"
+                    alt="Технокряк"
+                    width="370"
+                  />
+                  <div class="service-text is-hidden">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Технокряк</h2>
                   <p class="service-description">Веб-сайт</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/poster.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
+                <div>
+                  <img
+                    src="./images/poster.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">
                     Постер New Orlean vs Golden Star
@@ -110,79 +133,172 @@
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/seafood.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                />
+                <div>
+                  <img
+                    src="./images/seafood.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Ресторан Seafood</h2>
                   <p class="service-description">Приложение</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
+                <div>
+                  <img
+                    src="./images/prime.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                  />
+
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Проект Prime</h2>
                   <p class="service-description">Маркетинг</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
+                <div>
+                  <img
+                    src="./images/boxes.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Проект Boxes</h2>
                   <p class="service-description">Приложение</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/inspiration.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
+                <div>
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Inspiration has no Borders</h2>
                   <p class="service-description">Веб-сайт</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/limited.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                />
+                <div>
+                  <img
+                    src="./images/limited.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Издание Limited Edition</h2>
                   <p class="service-description">Дизайн</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+                <div>
+                  <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Проект LAB</h2>
                   <p class="service-description">Маркетинг</p>
                 </div>
               </a>
             </li>
+
             <li class="service-main">
               <a class="text-decoration" href="">
-                <img
-                  src="./images/business.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
+                <div>
+                  <img
+                    src="./images/business.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                  <div class="service-text">
+                    <p class="service-text-description">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="service-border">
                   <h2 class="service-title">Growing Business</h2>
                   <p class="service-description">Приложение</p>
@@ -193,10 +309,8 @@
         </div>
       </section>
     </main>
-  </body>
-</html>
 
-<!-- Футер -->
+    <!-- Футер -->
 
     <footer class="footer-section">
       <div class="container footer-container">
@@ -222,28 +336,28 @@
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#instagram"></use>
+                  <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#twitter"></use>
+                  <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#facebook"></use>
+                  <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="footer-icons-link">
                 <svg class="footer-icons-img">
-                  <use href="./images/sprite-new.svg#linkedin"></use>
+                  <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -253,4 +367,3 @@
     </footer>
   </body>
 </html>
-
