--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
           <ul class="site-nav">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link current underline"
+                >Портфолио</a
+              >
             </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
