создаем overlay на карточках

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,13 @@
           <ul class="service">
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div class="text-decoration-hover">
+                <div class="service-img">
                   <img
                     src="./images/technokryak.jpg"
                     alt="Технокряк"
                     width="370"
                   />
-                  <div class="service-text is-hidden">
+                  <div class="service-text">
                     <p class="service-text-description">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -111,7 +111,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/poster.jpg"
                     alt="Постер New Orlean vs Golden Star"
@@ -138,7 +138,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/seafood.jpg"
                     alt="Ресторан Seafood"
@@ -163,7 +163,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/prime.jpg"
                     alt="Проект Prime"
@@ -189,7 +189,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/boxes.jpg"
                     alt="Проект Boxes"
@@ -214,7 +214,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/inspiration.jpg"
                     alt="Inspiration has no Borders"
@@ -239,7 +239,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/limited.jpg"
                     alt="Издание Limited Edition"
@@ -264,7 +264,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
                   <div class="service-text">
                     <p class="service-text-description">
@@ -285,7 +285,7 @@
 
             <li class="service-main">
               <a class="text-decoration" href="">
-                <div>
+                <div class="service-img">
                   <img
                     src="./images/business.jpg"
                     alt="Growing Business"
