--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <ul class="team-icons">
                   <li class="team-list">
                     <a href="" class="team-network-icons">
-                      <svg width="20px" height="20px">
+                      <svg class="icons" width="20px" height="20px">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
@@ -220,7 +220,7 @@
 
                   <li class="team-list">
                     <a href="" class="team-network-icons">
-                      <svg class="team-icon-twitter" width="20px" height="20px">
+                      <svg class="icons" width="20px" height="20px">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
@@ -228,7 +228,7 @@
 
                   <li class="team-list">
                     <a href="" class="team-network-icons">
-                      <svg width="20px" height="20px">
+                      <svg class="icons" width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
@@ -237,7 +237,7 @@
                   <li class="team-list">
                     <a href="" class="team-network-icons">
                       <svg
-                        class="team-icon-linkedin"
+                      class="icons"
                         width="20px"
                         height="20px"
                       >
