--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                   <li class="team-list">
                     <a href="" class="team-network-icons">
-                      <svg class="icons" width="20px" height="20px">
+                      <svg width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
@@ -236,8 +236,7 @@
 
                   <li class="team-list">
                     <a href="" class="team-network-icons">
-                      <svg
-                      class="icons"
+                      <svg                      
                         width="20px"
                         height="20px"
                       >
